[gd_scene load_steps=25 format=4 uid="uid://c6koscqfkij2a"]

[ext_resource type="Script" uid="uid://cmyxdtdofbris" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://bum5i44oov6lc" path="res://scenes/turret.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://drsf0cfc0tfjd" path="res://scenes/spawnpoint.tscn" id="3_lbhrr"]
[ext_resource type="TileSet" uid="uid://cm6ji3vk54vlq" path="res://assets/Tilesheet/game.tres" id="4_iywne"]
[ext_resource type="PackedScene" uid="uid://38327qepamfd" path="res://scenes/enemy.tscn" id="4_lbhrr"]
[ext_resource type="Resource" uid="uid://dhetm6dyfjaq0" path="res://data/WaveSets/standard_wave_set.tres" id="5_37s47"]
[ext_resource type="Resource" uid="uid://cl45ls711auh0" path="res://data/WaveSets/hard_wave_set.tres" id="6_bt5mj"]
[ext_resource type="PackedScene" uid="uid://cha80n4nys568" path="res://scenes/tower_inventory.tscn" id="6_p57ef"]
[ext_resource type="PackedScene" uid="uid://bj7bvanf1l8ob" path="res://scenes/inventory_item.tscn" id="7_u5sy4"]
[ext_resource type="PackedScene" uid="uid://duwedlfq7l1el" path="res://scenes/small_turret.tscn" id="8_gee14"]
[ext_resource type="PackedScene" uid="uid://0i50wrimpkts" path="res://scenes/money.tscn" id="9_0tnpc"]
[ext_resource type="PackedScene" uid="uid://cggm63m3kgyf0" path="res://scenes/tower_placement_manager.tscn" id="11_rysoc"]
[ext_resource type="Script" uid="uid://bjll68ha667wc" path="res://scripts/Classes/Managers/Enemy_manager.gd" id="11_trtic"]
[ext_resource type="Script" uid="uid://dlm0jq8lsinqc" path="res://scripts/Classes/Managers/tower_manager.gd" id="12_ir15t"]
[ext_resource type="Script" uid="uid://dk012yfrb7rlr" path="res://scripts/Classes/Managers/path_manager.gd" id="13_ca42v"]
[ext_resource type="Script" uid="uid://df8q41e5umrho" path="res://scripts/Classes/Managers/wave_manager.gd" id="15_ir15t"]
[ext_resource type="PackedScene" uid="uid://r0e2ca4se74w" path="res://scenes/wave_counter.tscn" id="16_ca42v"]
[ext_resource type="Script" uid="uid://33b7gx5t0v01" path="res://scripts/Classes/WaveCounter/wave_counter.gd" id="17_rysoc"]
[ext_resource type="Script" uid="uid://dutoogcitifll" path="res://scripts/Classes/BoundsValidator/bounds_validator.gd" id="18_ssvqc"]
[ext_resource type="PackedScene" uid="uid://cnericrje62b1" path="res://scenes/player_health.tscn" id="19_264po"]
[ext_resource type="PackedScene" uid="uid://dwdfbmic1v7cx" path="res://scenes/end_game_menu.tscn" id="20_1kice"]
[ext_resource type="PackedScene" uid="uid://di70qcy5eo4wg" path="res://scenes/victory_popup.tscn" id="22_37s47"]

[sub_resource type="Curve2D" id="Curve2D_lnu2h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1564, 1011, 0, 0, 0, 0, -1557, 920, 0, 0, 0, 0, -1368, 837, 0, 0, 0, 0, -891, 843, 0, 0, 0, 0, -800, 649, 0, 0, 0, 0, -797, 213, 0, 0, 0, 0, -794, 43, 0, 0, 0, 0, -690, -48, 0, 0, 0, 0, -411, -51, 0, 0, 0, 0, -188, 18, 0, 0, 0, 0, -156, 191, 0, 0, 0, 0, -147, 530, 0, 0, 0, 0, 26, 567, 0, 0, 0, 0, 832, 574, 0, 0, 0, 0, 989, 501, 0, 0, 0, 0, 992, -468, 0, 0, 0, 0, 1061, -575, 0, 0, 0, 0, 2122, -578)
}
point_count = 18

[sub_resource type="Curve2D" id="Curve2D_lbhrr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1834, -442, 0, 0, 0, 0, -513, -440, 0, 0, 0, 0, -410, -296, 0, 0, 0, 0, -342, -36, 0, 0, 0, 0, -190, 16, 0, 0, 0, 0, -150, 291, 0, 0, 0, 0, -146, 523, 0, 0, 0, 0, 8, 562, 0, 0, 0, 0, 834, 571, 0, 0, 0, 0, 988, 501, 0, 0, 0, 0, 995, -449, 0, 0, 0, 0, 1059, -563, 0, 0, 0, 0, 2133, -581)
}
point_count = 13

[node name="game" type="Node2D"]
script = ExtResource("1_lbhrr")
metadata/_edit_horizontal_guides_ = [-1007.0]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AACa/zAAAAAMAAAAAACi/zAAAAAEAAgAAACa/zgAAAAIAAQAAACa/z8AAAAIAAQAAACi/z8AAAAAAAQAAACi/zcAAAAAAAAAAADS/x8AAAAAAAQAAADK/yAAAAAIAAQAAADK/xgAAAAIAAQAAADK/xAAAAAIAAQAAADS/xgAAAAAAAQAAADS/xAAAAAAAAQAAADi/wAAAAAEAAAAAADy/xAAAAAIAAQAAADy/xgAAAAIAAQAAAD6/w8AAAAAAAQAAAD6/xcAAAAAAAQAAAD6/x8AAAAAAAgAAADy/x8AAAAIAAQAAADy/ycAAAAMAAQAAAD6/ycAAAAEAAAAAACq/zAAAAAEAAgAAACq/zcAAAAEAAAAAACy/zAAAAAEAAgAAACy/zcAAAAEAAAAAAC6/zAAAAAEAAgAAAC6/zcAAAAEAAAAAADK//j/AAAMAAAAAADK/wAAAAAIAAQAAADK/wgAAAAIAAQAAADS//j/AAAEAAgAAADS/wAAAAAAAAAAAADS/wgAAAAAAAQAAADa/wAAAAAEAAAAAADC/zAAAAAEAAgAAADC/zcAAAAEAAAAAADK/ygAAAAIAAQAAADK/zAAAAAIAAgAAADK/zcAAAAEAAAAAADS/ycAAAAAAAQAAADS/y8AAAAAAAQAAADS/zcAAAAQAAQAAADq/wAAAAAEAAAAAADy//j/AAAEAAgAAADy/wAAAAAIAAAAAADy/wgAAAAIAAQAAAD6//j/AAAQAAAAAAD6////AAAAAAQAAAD6/wcAAAAAAAQAAAACAB8AAAAEAAgAAAACACcAAAAEAAAAAAAKAB8AAAAEAAgAAAAKACcAAAAEAAAAAAASAB8AAAAEAAgAAAASACcAAAAEAAAAAAAaAB8AAAAEAAgAAAAaACcAAAAEAAAAAAAiAB8AAAAEAAgAAAAiACcAAAAEAAAAAAAqAB8AAAAEAAgAAAAqACcAAAAEAAAAAABCABcAAAAIAAQAADA6ABcAAAAAAAQAADBCAB8AAAAIAAQAADA6AB8AAAAAAAAAADAyAB8AAAAEAAAAADBCACcAAAAMAAAAADA6ACcAAAAEAAgAADAyACcAAAAEAAgAADBCAA8AAAAEAAgAAFA6AA8AAAAEAAAAAFBCAAcAAAAEAAgAAFA6AAcAAAAEAAAAAFBCAP//AAAEAAgAAFA6AP//AAAEAAAAAFBCAPf/AAAEAAgAAFA6APf/AAAEAAAAAFBCAO//AAAEAAgAAFA6AO//AAAEAAAAAFA6ANf/AAAMAAAAAAA6AN//AAAIAAQAAAA6AOf/AAAIAAQAAABCANf/AAAEAAgAAABCAN//AAAAAAAAAABCAOf/AAAAAAQAAABKANf/AAAEAAgAAABKAN//AAAEAAAAAABSANf/AAAEAAgAAABSAN//AAAEAAAAAABaANf/AAAEAAgAAABaAN//AAAEAAAAAABiANf/AAAEAAgAAABiAN//AAAEAAAAAABqANf/AAAEAAgAAABqAN//AAAEAAAAAAByANf/AAAEAAgAAAByAN//AAAEAAAAAAB6ANf/AAAEAAgAAAB6AN//AAAEAAAAAACS/z8AAAAEAAQAAACK/z8AAAAEAAQAAACS/zcAAAAEAAQAAACS/y8AAAAEAAQAAACK/y8AAAAEAAQAAACK/zcAAAAEAAQAAACq/z8AAAAEAAQAAACy/z8AAAAEAAQAAAC6/z8AAAAEAAQAAADC/z8AAAAEAAQAAADK/z8AAAAEAAQAAADS/z8AAAAEAAQAAAB6AD8AAAAEAAQAAAB6ADcAAAAEAAQAAGB6AC8AAAAEAAQAAGB6ACcAAAAEAAQAAGB6AB8AAAAEAAQAAGB6ABcAAAAEAAQAAGB6AA8AAAAEAAQAAGB6AAcAAAAEAAQAAGB6AP//AAAEAAQAAGB6APf/AAAEAAQAAGB6AO//AAAEAAQAAGB6AOf/AAAEAAQAAACK/wcAAAAEAAQAAFCK/w8AAAAEAAQAAFCK/xcAAAAEAAQAAFCK/x8AAAAEAAQAAFCK/ycAAAAEAAQAAFCK//f/AAAEAAQAAFCK////AAAEAAQAAFCK/8f/AAAEAAQAAFCK/8//AAAEAAQAAFCy/8D/AAAEAAQAADCq/8D/AAAEAAQAADCi/8D/AAAEAAQAADCa/8D/AAAEAAQAADCS/8D/AAAEAAQAADDa/8D/AAAEAAQAADDS/8D/AAAEAAQAADDK/8D/AAAEAAQAADDC/8D/AAAEAAQAADC6/8D/AAAEAAQAADACAMD/AAAEAAQAADD6/8D/AAAEAAQAADDy/8D/AAAEAAQAADDq/8D/AAAEAAQAADAqAMD/AAAEAAQAADAiAMD/AAAEAAQAADAaAMD/AAAEAAQAADASAMD/AAAEAAQAADAKAMD/AAAEAAQAADBSAMD/AAAEAAQAADBKAMD/AAAEAAQAADBCAMD/AAAEAAQAADA6AMD/AAAEAAQAADAyAMD/AAAEAAQAADB6AMD/AAAEAAQAADByAMD/AAAEAAQAADBqAMD/AAAEAAQAADBiAMD/AAAEAAQAADBaAMD/AAAEAAQAADB6AMj/AAAEAAQAAAB6AND/AAAEAAQAAADa/z8AAAAEAAQAAADi/z8AAAAEAAQAAADq/z8AAAAEAAQAAADy/z8AAAAEAAQAAAD6/z8AAAAEAAQAAAACAD8AAAAEAAQAAAAKAD8AAAAEAAQAAAASAD8AAAAEAAQAAAAaAD8AAAAEAAQAAAAiAD8AAAAEAAQAAAAqAD8AAAAEAAQAAAAyAD8AAAAEAAQAAAA6AD8AAAAEAAQAAABCAD8AAAAEAAQAAABKAD8AAAAEAAQAAABSAD8AAAAEAAQAAABaAD8AAAAEAAQAAABiAD8AAAAEAAQAAABqAD8AAAAEAAQAAAByAD8AAAAEAAQAAADa/zcAAAAEAAQAAADi/zcAAAAEAAQAAADq/zcAAAAEAAQAAADy/zcAAAAEAAQAAAD6/zcAAAAEAAQAAAACADcAAAAEAAQAAAAKADcAAAAEAAQAAAASADcAAAAEAAQAAAAaADcAAAAEAAQAAAAiADcAAAAEAAQAAAAqADcAAAAEAAQAAAAyADcAAAAEAAQAAAA6ADcAAAAEAAQAAABCADcAAAAEAAQAAABKADcAAAAEAAQAAABSADcAAAAEAAQAAABaADcAAAAEAAQAAABiADcAAAAEAAQAAABqADcAAAAEAAQAAAByADcAAAAEAAQAAADa/y8AAAAEAAQAAADi/y8AAAAEAAQAAADq/y8AAAAEAAQAAADy/y8AAAAEAAQAAAD6/y8AAAAEAAQAAAACAC8AAAAEAAQAAAAKAC8AAAAEAAQAAAASAC8AAAAEAAQAAAAaAC8AAAAEAAQAAAAiAC8AAAAEAAQAAAAqAC8AAAAEAAQAAAAyAC8AAAAEAAQAAAA6AC8AAAAEAAQAAABCAC8AAAAEAAQAAABKAC8AAAAEAAQAAABSAC8AAAAEAAQAAABaAC8AAAAEAAQAAABiAC8AAAAEAAQAAABqAC8AAAAEAAQAAAByAC8AAAAEAAQAAADa/8j/AAAEAAQAAADq/8j/AAAEAAQAAADy/8j/AAAEAAQAAAD6/8j/AAAEAAQAAAACAMj/AAAEAAQAAAAKAMj/AAAEAAQAAAASAMj/AAAEAAQAAAAaAMj/AAAEAAQAAAAiAMj/AAAEAAQAAAAqAMj/AAAEAAQAAAAyAMj/AAAEAAQAAAA6AMj/AAAEAAQAAABCAMj/AAAEAAQAAABKAMj/AAAEAAQAAABSAMj/AAAEAAQAAABaAMj/AAAEAAQAAABiAMj/AAAEAAQAAABqAMj/AAAEAAQAAAByAMj/AAAEAAQAAADa/8//AAAEAAQAAADq/8//AAAEAAQAAADy/8//AAAEAAQAAAD6/8//AAAEAAQAAAACAM//AAAEAAQAAAAKAM//AAAEAAQAAAASAM//AAAEAAQAAAAaAM//AAAEAAQAAAAiAM//AAAEAAQAAAAqAM//AAAEAAQAAAAyAM//AAAEAAQAAAA6AM//AAAEAAQAAABCAM//AAAEAAQAAABKAM//AAAEAAQAAABSAM//AAAEAAQAAABaAM//AAAEAAQAAABiAM//AAAEAAQAAABqAM//AAAEAAQAAAByAM//AAAEAAQAAACa/9f/AAAEAAQAAACi/9f/AAAEAAQAAACq/9f/AAAEAAQAAACy/9f/AAAEAAQAAAC6/9f/AAAEAAQAAADC/9f/AAAEAAQAAADK/9f/AAAEAAQAAADS/9f/AAAEAAQAAADa/9f/AAAEAAQAAAASANf/AAAEAAQAAAAaANf/AAAEAAQAAAAiANf/AAAEAAQAAAAqANf/AAAEAAQAAAAyANf/AAAEAAQAAAD6/9//AAAEAAQAAAACAN//AAAEAAQAAAASAN//AAAEAAQAAAAaAN//AAAEAAQAAAAiAN//AAAEAAQAAAAqAN//AAAEAAQAAAAyAN//AAAEAAQAAAD6/+f/AAAEAAQAAAACAOf/AAAEAAQAAAASAOf/AAAEAAQAAAAaAOf/AAAEAAQAAAAiAOf/AAAEAAQAAAAqAOf/AAAEAAQAAAAyAOf/AAAEAAQAAAD6/+//AAAEAAQAAAACAO//AAAEAAQAAAASAO//AAAEAAQAAAAaAO//AAAEAAQAAAAiAO//AAAEAAQAAAAqAO//AAAEAAQAAAAyAO//AAAEAAQAAAACAPH/AAAEAAQAAAASAPH/AAAEAAQAAAAaAPH/AAAEAAQAAAAiAPH/AAAEAAQAAAAqAPH/AAAEAAQAAAAyAPH/AAAEAAQAAACS/9D/AAAEAAQAAGCS/8j/AAAEAAQAAGCS/xAAAAAEAAQAAGCS/wgAAAAEAAQAAGCS/wAAAAAEAAQAAGCS//j/AAAEAAQAAGCS/xgAAAAEAAQAAACS/yAAAAAEAAQAAACS/ygAAAAEAAQAAACa/xkAAAAEAAQAAGCa/xEAAAAEAAQAAGCa/wkAAAAEAAQAAGCa/wEAAAAEAAQAAGCa//n/AAAEAAQAAGCi/xkAAAAEAAQAAGCi/xEAAAAEAAQAAGCi/wkAAAAEAAQAAGCi/wEAAAAEAAQAAGCi//n/AAAEAAQAAGCq/xkAAAAEAAQAAGCq/xEAAAAEAAQAAGCq/wkAAAAEAAQAAGCq/wEAAAAEAAQAAGCq//n/AAAEAAQAAGCy/xkAAAAEAAQAAGCy/xEAAAAEAAQAAGCy/wkAAAAEAAQAAGCy/wEAAAAEAAQAAGCy//n/AAAEAAQAAGC6/xkAAAAEAAQAAGC6/xEAAAAEAAQAAGC6/wkAAAAEAAQAAGC6/wEAAAAEAAQAAGC6//n/AAAEAAQAAGDC/xkAAAAEAAQAAGDC/xEAAAAEAAQAAGDC/wkAAAAEAAQAAGDC/wEAAAAEAAQAAGDC//n/AAAEAAQAAGC6/yEAAAAEAAQAAACy/yEAAAAEAAQAAACq/yEAAAAEAAQAAACi/yEAAAAEAAQAAACa/yEAAAAEAAQAAAC6/ygAAAAEAAQAAACy/ygAAAAEAAQAAACq/ygAAAAEAAQAAACi/ygAAAAEAAQAAACa/ygAAAAEAAQAAADC/yAAAAAEAAQAAADC/ycAAAAEAAQAAADA/ygAAAAEAAQAAADC/ykAAAAEAAQAAABKAOf/AAAEAAQAAABSAOf/AAAEAAQAAABaAOf/AAAEAAQAAABiAOf/AAAEAAQAAABqAOf/AAAEAAQAAABKAO//AAAEAAQAAABSAO//AAAEAAQAAABaAO//AAAEAAQAAABiAO//AAAEAAQAAABqAO//AAAEAAQAAABKAPf/AAAEAAQAAABSAPf/AAAEAAQAAABaAPf/AAAEAAQAAABiAPf/AAAEAAQAAABqAPf/AAAEAAQAAABKAP//AAAEAAQAAABSAP//AAAEAAQAAABaAP//AAAEAAQAAABiAP//AAAEAAQAAABqAP//AAAEAAQAAABKAAcAAAAEAAQAAABSAAcAAAAEAAQAAABaAAcAAAAEAAQAAABiAAcAAAAEAAQAAABqAAcAAAAEAAQAAABKAA8AAAAEAAQAAABSAA8AAAAEAAQAAABaAA8AAAAEAAQAAABiAA8AAAAEAAQAAABqAA8AAAAEAAQAAABKABcAAAAEAAQAAABSABcAAAAEAAQAAABaABcAAAAEAAQAAABiABcAAAAEAAQAAABqABcAAAAEAAQAAABKAB8AAAAEAAQAAABSAB8AAAAEAAQAAABaAB8AAAAEAAQAAABiAB8AAAAEAAQAAABqAB8AAAAEAAQAAABKACcAAAAEAAQAAABSACcAAAAEAAQAAABaACcAAAAEAAQAAABiACcAAAAEAAQAAABqACcAAAAEAAQAAAByAAcAAAAEAAQAAEByAA8AAAAEAAQAAEByABcAAAAEAAQAAEByAB8AAAAEAAQAAEByACcAAAAEAAQAAEByAP//AAAEAAQAAAByAPf/AAAEAAQAAAByAO//AAAEAAQAAAByAOf/AAAEAAQAAACZ/8j/AAAEAAQAAACh/8j/AAAEAAQAAACp/8j/AAAEAAQAAACx/8j/AAAEAAQAAAC5/8j/AAAEAAQAAACa/9D/AAAEAAQAAACi/9D/AAAEAAQAAACq/9D/AAAEAAQAAACy/9D/AAAEAAQAAAC6/9D/AAAEAAQAAAC3/8b/AAAEAAQAAAC//8b/AAAEAAQAAADH/8b/AAAEAAQAAADP/8b/AAAEAAQAAADX/8b/AAAEAAQAAAC4/8//AAAEAAQAAADA/8//AAAEAAQAAADI/8//AAAEAAQAAADQ/8//AAAEAAQAAADY/8//AAAEAAQAAAC3/8z/AAAEAAQAAAC//8z/AAAEAAQAAADH/8z/AAAEAAQAAADP/8z/AAAEAAQAAADX/8z/AAAEAAQAAAACAPn/AAAEAAQAAAASAPn/AAAEAAQAAAAaAPn/AAAEAAQAAAAiAPn/AAAEAAQAAAACAAEAAAAEAAQAAAAKAAEAAAAEAAQAAAASAAEAAAAEAAQAAAAaAAEAAAAEAAQAAAAiAAEAAAAEAAQAAAACAAkAAAAEAAQAAAAKAAkAAAAEAAQAAAASAAkAAAAEAAQAAAAaAAkAAAAEAAQAAAAiAAkAAAAEAAQAAAACABEAAAAEAAQAAAAKABEAAAAEAAQAAAASABEAAAAEAAQAAAAaABEAAAAEAAQAAAAiABEAAAAEAAQAAAABABcAAAAEAAQAAAAJABcAAAAEAAQAAAARABcAAAAEAAQAAAAZABcAAAAEAAQAAAAhABcAAAAEAAQAAAATABgAAAAEAAQAAAAbABgAAAAEAAQAAAAjABgAAAAEAAQAAAArABgAAAAEAAQAAAAzABgAAAAEAAQAAAASABAAAAAEAAQAAAAaABAAAAAEAAQAAAAiABAAAAAEAAQAAAAqABAAAAAEAAQAAAAyABAAAAAEAAQAAAASAAsAAAAEAAQAAAAaAAsAAAAEAAQAAAAiAAsAAAAEAAQAAAAqAAsAAAAEAAQAAAAyAAsAAAAEAAQAAAASAAQAAAAEAAQAAAAaAAQAAAAEAAQAAAAiAAQAAAAEAAQAAAAqAAQAAAAEAAQAAAAyAAQAAAAEAAQAAAATAPz/AAAEAAQAAAAbAPz/AAAEAAQAAAAjAPz/AAAEAAQAAAArAPz/AAAEAAQAAAAzAPz/AAAEAAQAAAATAPj/AAAEAAQAAAAbAPj/AAAEAAQAAAAjAPj/AAAEAAQAAAArAPj/AAAEAAQAAAAzAPj/AAAEAAQAAAAwAPH/AAAEAAQAAFAwAPn/AAAEAAQAAFAwAAEAAAAEAAQAAFAwAAkAAAAEAAQAAFAwABEAAAAEAAQAAFAtAPn/AAAEAAQAAFAtAAEAAAAEAAQAAFAtAAkAAAAEAAQAAFAtABEAAAAEAAQAAFAtABkAAAAEAAQAAFDq/wgAAAAEAAQAAFDq/xAAAAAEAAQAAFDq/xgAAAAEAAQAAFDq/yAAAAAEAAQAAFDq/ygAAAAEAAQAAFDi/wgAAAAEAAQAAFDi/xAAAAAEAAQAAFDi/xgAAAAEAAQAAFDi/yAAAAAEAAQAAFDi/ygAAAAEAAQAAFDa/wcAAAAEAAQAAFDa/w8AAAAEAAQAAFDa/xcAAAAEAAQAAFDa/x8AAAAEAAQAAFDa/ycAAAAEAAQAAFCL/8D/AAAEAAQAAACE/8D/AAAEAAQAAAAKAN//AAAEAAQAAAAKAOf/AAAEAAQAAAAKAO//AAAEAAQAAAAKAPH/AAAEAAQAAAAKAPn/AAAEAAQAAAAKANf/AAAEAAQAAAD6/9f/AAAEAAQAAAACANf/AAAEAAQAAADq/9f/AAAEAAQAAADy/9f/AAAEAAQAAADi/8//AAAEAAQAAADi/9f/AAAEAAQAAADi/8j/AAAEAAQAAADi/8D/AAAEAAQAADCS//b/AAAEAAQAAACL/+D/AAAEAAgAAACL/+j/AAAEAAAAAACT/+D/AAAEAAgAAACT/+j/AAAEAAAAAACb/+D/AAAEAAgAAACb/+j/AAAEAAAAAACj/+D/AAAEAAgAAACj/+j/AAAEAAAAAACq/+D/AAAEAAgAAACq/+j/AAAEAAAAAACy/+D/AAAEAAgAAACy/+j/AAAEAAAAAAC6/+D/AAAEAAgAAAC6/+j/AAAEAAAAAADC/+D/AAAEAAgAAADC/+j/AAAEAAAAAADK/+D/AAAEAAgAAADK/+j/AAAEAAAAAADS/+D/AAAEAAgAAADS/+j/AAAEAAAAAADq/+D/AAAMAAAAABDi/+D/AAAEAAgAABDa/+D/AAAEAAgAABDq/+j/AAAIAAQAABDi/+j/AAAAAAAAABDa/+j/AAAEAAAAABDq//D/AAAIAAQAABDa//j/AAAEAAgAAADi//D/AAAIAAQAAADi//j/AAAIAAgAAADq//j/AAAAAAgAAACK//D/AAAEAAQAAACS//D/AAAEAAQAAACa//D/AAAEAAQAAACi//D/AAAEAAQAAACq//D/AAAEAAQAAACy//D/AAAEAAQAAAC6//D/AAAEAAQAAADC//D/AAAEAAQAAADK//D/AAAEAAQAAADS//D/AAAEAAQAAADa//D/AAAEAAQAAACa//j/AAAEAAQAAACi//j/AAAEAAQAAACq//j/AAAEAAQAAACy//j/AAAEAAQAAAC6//j/AAAEAAQAAADC//j/AAAEAAQAAAD6//D/AAAEAAQAAADy//D/AAAEAAQAAADy/+j/AAAEAAQAAADy/+D/AAAEAAQAAADy/9j/AAAEAAQAAADq/9n/AAAEAAQAAADC/9j/AAAEAAQAAADK/9j/AAAEAAQAAADS/9j/AAAEAAQAAADa/9j/AAAEAAQAAADi/9j/AAAEAAQAAACa/9j/AAAEAAQAAACi/9j/AAAEAAQAAACq/9j/AAAEAAQAAACy/9j/AAAEAAQAAAC6/9j/AAAEAAQAAACS/9j/AAAEAAQAAACK/9j/AAAEAAQAAACK/9f/AAAEAAQAAAA=")
tile_set = ExtResource("4_iywne")

[node name="Path2D" type="Path2D" parent="TileMapLayer" groups=["Path"]]
curve = SubResource("Curve2D_lnu2h")

[node name="Path2D2" type="Path2D" parent="TileMapLayer" groups=["Path"]]
curve = SubResource("Curve2D_lbhrr")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(15.52, 4.6)
zoom = Vector2(0.5, 0.5)

[node name="Spawnpoint" parent="." groups=["SpawnPoint"] instance=ExtResource("3_lbhrr")]
position = Vector2(-1701, 1258)
enemy_logic_scene = ExtResource("4_lbhrr")
wave_set = ExtResource("5_37s47")

[node name="Spawnpoint2" parent="." groups=["SpawnPoint"] instance=ExtResource("3_lbhrr")]
position = Vector2(-2247, -459)
enemy_logic_scene = ExtResource("4_lbhrr")
wave_set = ExtResource("6_bt5mj")

[node name="TowerInventory" parent="." instance=ExtResource("6_p57ef")]
offset_left = -1855.0
offset_top = -1062.0
offset_right = -1827.0
offset_bottom = -1042.0
scale = Vector2(2.15999, 2.15999)
inventory_item_scene = ExtResource("7_u5sy4")
available_towers = Array[PackedScene]([ExtResource("2_lnu2h"), ExtResource("8_gee14")])

[node name="Money" parent="." instance=ExtResource("9_0tnpc")]
offset_left = 1918.0
offset_top = -946.0
offset_right = 1958.0
offset_bottom = -906.0
money_amount = 200

[node name="BoundsValidator" type="Node" parent="." node_paths=PackedStringArray("tilemap")]
script = ExtResource("18_ssvqc")
tilemap = NodePath("../TileMapLayer")

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("11_trtic")

[node name="TowerManager" type="Node" parent="."]
script = ExtResource("12_ir15t")

[node name="PathManager" type="Node" parent="."]
script = ExtResource("13_ca42v")

[node name="TowerPlacementManager" parent="." instance=ExtResource("11_rysoc")]
money_path = NodePath("../Money")
tower_manager_path = NodePath("../TowerManager")
bounds_validator_path = NodePath("../BoundsValidator")
path_manager_path = NodePath("../PathManager")

[node name="WaveCounter" parent="." node_paths=PackedStringArray("wave_manager") instance=ExtResource("16_ca42v")]
position = Vector2(-92, -1065)
script = ExtResource("17_rysoc")
wave_manager = NodePath("../WaveManager")

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("15_ir15t")
spawners = Array[NodePath]([NodePath("../Spawnpoint"), NodePath("../Spawnpoint2")])

[node name="PlayerHealth" parent="." instance=ExtResource("19_264po")]
position = Vector2(1320, -1062)
enemy_manager_path = NodePath("../EnemyManager")

[node name="EndGameMenu" parent="." instance=ExtResource("20_1kice")]
process_mode = 2
visible = false
offset_left = -185.0
offset_top = -107.0
offset_right = -185.0
offset_bottom = -107.0
scale = Vector2(1.08, 1.08)

[node name="VictoryPopup" parent="." instance=ExtResource("22_37s47")]
visible = false
offset_left = -183.0
offset_top = -450.0
offset_right = -183.0
offset_bottom = -450.0
money_path = NodePath("../Money")
lives_path = NodePath("../PlayerHealth")
wave_manager_path = NodePath("../WaveManager")
end_game_menu_path = NodePath("../EndGameMenu")
